--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>West Pokot Water and Sanitation Web Map</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #91bee2;
+            color: white;
+            padding: 1em;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            z-index: 1000;
+            height: 30px; /* Adjusted for visibility */
+        }
+        header img {
+            width: 80px; /* Enlarged logo width */
+            height: 80px; /* Enlarged logo height */
+            margin-right: 15px; /* Space between logo and title */
+        }
+        main {
+            display: flex;
+            flex-direction: column;
+            height: calc(100vh - 160px); /* Adjust height to fit header and footer */
+            margin: 0;
+            position: relative;
+        }
+        iframe {
+            flex: 1; /* Make iframe take available space */
+            border: 10px solid #4d4c4c; /* Thick gray border around the iframe */
+            width: 100%;
+            height: 100%;
+            box-sizing: border-box; /* Ensure padding is included in width/height */
+        }
+        footer {
+            background-color: #4d4c4c;
+            color: white;
+            padding: 2em; /* Increased size for visibility */
+            text-align: center;
+            position: relative;
+            z-index: 1000;
+            height: 30px; /* Adjusted for visibility */
+        }
+        .footer_section {
+            display: flex;
+            justify-content: space-around;
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        .footer_section ul {
+            padding: 0;
+            margin: 0;
+        }
+        .footer_section li {
+            margin: 0.2em 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2g9T8zt22GBgyWEveBs2Q1JUQDu8wVBDsDg&s" alt="Company Logo">
+        <h1>West Pokot Water and Sanitation Web Map</h1>
+    </header>
+    <main>
+        <iframe src="https://www.arcgis.com/apps/instant/basic/index.html?appid=c56712c5a96742f8a60969340bc2cd53" allowfullscreen></iframe>
+    </main>
+    <footer>
+        <div class="footer_section">
+            <ul class="contributors">CONTRIBUTORS
+                <li>Irine C Toroina</li>
+            </ul>
+            <ul class="authors">AUTHORS
+                <li>OPEN STREET</li>
+            </ul>
+            <ul class="marginal_information">MARGINAL INFORMATION
+                <li>West Pokot Water and Sanitation Web Map</li>
+            </ul>
+        </div>
+    </footer>
+</body>
+</html>
